<resources>
    <string name="app_name">PracticalExam(RonaldMacwan)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add_category">Add Category</string>
    <string name="add_category_title">Create and store category</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_contact_list">Contact List</string>

    <string name="category_input_hint">Add Category</string>
    <string name="category_save_button_text">Save</string>
    <string name="category_update_button_text">Update</string>

    <string name="category_input_validation_message">Please enter category name</string>
    <string name="category_insert_success_message">Category inserted successfully</string>
    <string name="category_update_success_message">Row updated successfully</string>
    <string name="category_delete_success_message">Row deleted Successfully</string>


    <string name="contact_input_first_name_hint">First Name</string>
    <string name="contact_input_last_name_hint">Last Name</string>
    <string name="contact_input_mobile_number_hint">Mobile Number</string>
    <string name="contact_input_email_hint">Email</string>


    <string name="common_error_message">Something went wrong, Please try again later!</string>

    <string name="search_menu_text">Search</string>
    <string name="filter_menu_text">Filter</string>

    <string name="filter_title_text">Filter By Category</string>

    <string name="clear_filter_text">Clear Filter</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>