<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_add_category">

    <fragment
        android:id="@+id/nav_add_category"
        android:name="com.example.practicalexamronaldmacwan.ui.category.AddCategoryFragment"
        android:label="@string/add_category_title"
        tools:layout="@layout/fragment_add_category" />

    <fragment
        android:id="@+id/nav_add_contact"
        android:name="com.example.practicalexamronaldmacwan.ui.contact.addcontact.AddContactFragment"
        android:label="@string/menu_add_contact"
        tools:layout="@layout/fragment_add_contact" >
        <action
            android:id="@+id/action_nav_add_contact_to_nav_contact_list"
            app:destination="@id/nav_contact_list"
            app:popUpTo="@id/nav_add_contact"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_contact_list"
        android:name="com.example.practicalexamronaldmacwan.ui.contact.contactslist.ContactListFragment"
        android:label="@string/menu_contact_list"
        tools:layout="@layout/fragment_contact_list" >
        <action
            android:id="@+id/action_nav_contact_list_to_nav_add_contact"
            app:destination="@id/nav_add_contact"
            app:popUpTo="@id/nav_contact_list"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>