<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="contactViewModel"
            type="com.example.practicalexamronaldmacwan.ui.contact.ContactViewModel" />

        <variable
            name="categoryViewModel"
            type="com.example.practicalexamronaldmacwan.ui.category.AddCategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:context=".MainActivity">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/profile"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#FF000000"
                    android:layout_marginBottom="25dp"/>

                <EditText
                    android:id="@+id/first_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:hint="@string/contact_input_first_name_hint"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:text="@={contactViewModel.inputFirstName}"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/last_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:hint="@string/contact_input_last_name_hint"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:text="@={contactViewModel.inputLastName}"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/mobile_number_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:hint="@string/contact_input_mobile_number_hint"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:text="@={contactViewModel.inputMobileNumber}"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:hint="@string/contact_input_email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:text="@={contactViewModel.inputEmail}"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <Spinner
                        android:id="@+id/spinner_category"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/input_bg" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end|bottom|center"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
                        tools:ignore="ContentDescription" />
                </FrameLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/save_or_update_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->contactViewModel.saveOrUpdate()}"
                        android:text="@={contactViewModel.saveOrUpdateButtonText}"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>